# rust-fullstack-template

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
api/: Cargo.toml
api/src/: lib.rs
backend/: Cargo.toml
backend/src/: main.rs
backend/src/route1/: mod.rs
backend/src/route2/: mod.rs
frontend/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
frontend/src/: app.rs  lib.rs  route1.rs  route2.rs  style.scss
frontend/static/: index.html
helpers/: Cargo.toml
helpers/src/: lib.rs
