[package]
name = "frontend"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
yew = "0.17"
yew-router = "0.14"
anyhow = "1"
api = { path = "../api" }
serde = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
]
